--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # First program (main)
 add_executable(MainApp
     src/main.cpp
-)
+ "src/hashtable.cpp")
+
+target_include_directories(MainApp PUBLIC include)
 
 # Second program (client test)
 add_executable(ClientTest
